src/objects/SO_Payment_Role__c.object
<CustomObject>
    <fields>
        <fullName>Applicable_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicable Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>SO Payment Roles</relationshipLabel>
        <relationshipName>SO_Payment_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicable_Tax_Name__c</fullName>
        <formula>Applicable_Tax__r.Name__c</formula>
        <label>Applicable Tax Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>SO Payment Roles</relationshipLabel>
        <relationshipName>SO_Payment_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>SO Payment Roles</relationshipLabel>
        <relationshipName>SO_Payment_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deductible_Status__c</fullName>
        <label>Deductible Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Adjust</fullName>
                </value>
                <value>
                    <fullName>Owing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Label__c</fullName>
        <formula>Applicable_Tax__r.Forms_Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Number</label>
        <referenceTo>CO_Invoice_Header__c</referenceTo>
        <relationshipLabel>SO Payment Roles</relationshipLabel>
        <relationshipName>SO_Payment_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SO_Payment_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>List_Tax_items_on_forms__c</fullName>
        <formula>Applicable_Tax__r.Forms_List_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Tax items on forms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Total__c</fullName>
        <formula>IF( $Setup.Configurations__c.Tax_Included_Pricing__c,  Total_Amount__c -  Tax_Amount__c , Total_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Header</label>
        <referenceTo>Service_Order_Header__c</referenceTo>
        <relationshipLabel>SO Payment Roles</relationshipLabel>
        <relationshipName>SO_Payment_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_With_Tax__c</fullName>
        <formula>IF( $Setup.Configurations__c.Tax_Included_Pricing__c ,  Total_Amount__c , ( Tax_Amount__c 
     +  Pre_Tax_Total__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total With Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>SO Payment Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Claim__c</columns>
        <columns>Deductible_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SOPR-{0000000}</displayFormat>
        <label>SO Payment Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SO Payment Roles</pluralLabel>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <description>Customer</description>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deductible</fullName>
        <active>true</active>
        <description>Deductible</description>
        <label>Deductible</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <description>Internal</description>
        <label>Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Third_Party</fullName>
        <active>true</active>
        <description>Third Party</description>
        <label>Third Party</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>